[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[project]
authors = [
  {name = "Cyril Robert", email = "github.com/cyrilrbt"},
]
dependencies = [
  "aiohttp",
  "obs-websocket-py",
  "python-dotenv",
]
description = "A tool to monitor SRT feeds and switch OBS scenes based on feed health."
name = "srt_sentinel"
readme = "README.md"
requires-python = ">=3.10"
version = "1.0.0"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py310']

[tool.isort]
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["srt_sentinel"]
line_length = 88
multi_line_output = 3
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
use_parentheses = true
